--- a/Contact.html
+++ b/Contact.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -18,7 +19,13 @@
 
   <section>
     <h1>Contact Me</h1>
-    <p>You can reach me directly via email at <a href="mailto:bomfreelancelab@gmail.com">youremail@example.com</a>.</p>
+    <p>If you're interested in personalized academic support, feel free to reach out. I typically respond within 24 hours.</p>
+    <p><strong>Email:</strong> <a href="mailto:bomfreelancelab@gmail.com">bomfreelancelab@gmail.com</a></p>
   </section>
+
+  <footer>
+    <p>&copy; 2025 Tutor Brian | Academic Support</p>
+  </footer>
+
 </body>
 </html>
