--- a/Index.html
+++ b/Index.html
@@ -73,6 +73,16 @@
       <p>Email: <a href="mailto:bomfreelancelab@gmail.com">bomfreelancelab@gmail.com</a></p>
       <p>LinkedIn | WhatsApp | Telegram – coming soon</p>
     </section>
+
+    <!-- 📅 Calendly Schedule Section -->
+    <section class="schedule">
+      <h2>📅 Book a Coaching Session</h2>
+      <p>Choose a time that works for you below:</p>
+      <!-- Calendly inline widget begin -->
+      <div class="calendly-inline-widget" data-url="https://calendly.com/tutorjohntaylor/30min" style="min-width:320px;height:700px;"></div>
+      <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+      <!-- Calendly inline widget end -->
+    </section>
   </main>
 
   <footer>
