--- a/Index.html
+++ b/Index.html
@@ -4,11 +4,29 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tutor Brian – Academic Coaching</title>
+
+  <!-- ✅ Meta Description -->
+  <meta name="description" content="Personalized academic coaching for students and researchers. Get expert help with formatting, writing, literature reviews, and thesis support.">
+
+  <!-- ✅ Open Graph Tags -->
+  <meta property="og:title" content="Tutor Brian – Academic Coaching" />
+  <meta property="og:description" content="Need academic guidance? Book a 1-on-1 session with Tutor Brian for help in research, thesis writing, and formatting." />
+  <meta property="og:image" content="https://images.unsplash.com/photo-1573496529574-be85d6a60704?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" />
+  <meta property="og:url" content="https://yourdomain.com" />
+  <meta property="og:type" content="website" />
+
+  <!-- ✅ Favicon -->
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/3135/3135768.png" type="image/png" />
+
+  <!-- ✅ Fonts & Styles -->
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+
   <!-- ✅ AOS CSS -->
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+
+  <!-- ✅ Theme Toggle Script -->
   <script defer>
     function toggleTheme() {
       const html = document.documentElement;
@@ -80,10 +98,8 @@
     <section class="schedule" data-aos="fade-up">
       <h2>📅 Book a Coaching Session</h2>
       <p>Choose a time that works for you below:</p>
-      <!-- Calendly inline widget begin -->
       <div class="calendly-inline-widget" data-url="https://calendly.com/tutorjohntaylor/30min" style="min-width:320px;height:700px;"></div>
       <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-      <!-- Calendly inline widget end -->
     </section>
   </main>
 
