--- a/Index.html
+++ b/Index.html
@@ -94,6 +94,19 @@
       <p>LinkedIn | WhatsApp | Telegram – coming soon</p>
     </section>
 
+    <!-- ✅ Newsletter Section -->
+    <section class="newsletter" data-aos="fade-up">
+      <h2>📬 Join My Academic Tips Newsletter</h2>
+      <p>Subscribe for exclusive resources, writing tips, and free tools for academic success.</p>
+      <form action="https://yourmailchimpurl.com" method="POST" target="_blank">
+        <input type="email" name="EMAIL" placeholder="Enter your email" required />
+        <button type="submit">Subscribe</button>
+      </form>
+      <p class="lead-magnet">
+        🎁 Get my <a href="assets/FreeGuide.pdf" download>FREE PDF: ‘5 Research Writing Mistakes to Avoid’</a> when you sign up!
+      </p>
+    </section>
+
     <!-- 📅 Calendly Schedule Section -->
     <section class="schedule" data-aos="fade-up">
       <h2>📅 Book a Coaching Session</h2>
