--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,7 @@
       <li><a href="about.html">About</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="resources.html">Resources</a></li>
+      <li><a href="#resources">Resources</a></li>
     </ul>
     <button class="theme-toggle" onclick="toggleTheme()">🌓</button>
   </nav>
@@ -81,7 +81,7 @@
       <cite>– J. Morgan, MSc Graduate</cite>
     </section>
 
-    <section class="resources" data-aos="fade-up">
+    <section id="resources" class="resources" data-aos="fade-up">
       <h2>Free Resources</h2>
       <ul>
         <li><a href="assets/AIntelligence.pdf" download>📄 Sample PDF: Research on AI</a></li>
