--- a/Index.html
+++ b/Index.html
@@ -42,6 +42,7 @@
       <li><a href="about.html">About</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="contact.html">Contact</a></li>
+      <li><a href="faq.html">FAQ</a></li> <!-- ✅ Newly added FAQ link -->
     </ul>
     <button class="theme-toggle" onclick="toggleTheme()">🌓</button>
   </nav>
