--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,7 @@
       <li><a href="about.html">About</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="contact.html">Contact</a></li>
-      <li><a href="faq.html">FAQ</a></li> <!-- ✅ Newly added FAQ link -->
+      <li><a href="faq.html">FAQ</a></li>
     </ul>
     <button class="theme-toggle" onclick="toggleTheme()">🌓</button>
   </nav>
@@ -75,10 +75,29 @@
       <a href="mailto:bomfreelancelab@gmail.com" class="cta">Start Now →</a>
     </section>
 
+    <!-- ✅ Testimonial Carousel -->
     <section class="testimonials" data-aos="fade-up">
       <h2>What Students Say</h2>
-      <blockquote>“I couldn’t have completed my master's thesis without Brian’s help. His insight and formatting support were invaluable.”</blockquote>
-      <cite>– J. Morgan, MSc Graduate</cite>
+      <div class="carousel">
+        <div class="carousel-track">
+          <div class="testimonial-card">
+            <p>“I couldn’t have completed my master's thesis without Brian’s help. His insight and formatting support were invaluable.”</p>
+            <cite>– J. Morgan, MSc Graduate</cite>
+          </div>
+          <div class="testimonial-card">
+            <p>“Brian’s coaching helped me turn a failing paper into a distinction-grade submission. His knowledge of APA style is unmatched.”</p>
+            <cite>– A. Kibet, MBA Student</cite>
+          </div>
+          <div class="testimonial-card">
+            <p>“Thanks to Brian, I passed my dissertation defense with confidence. His step-by-step guidance made a huge difference.”</p>
+            <cite>– Sarah L., PhD Candidate</cite>
+          </div>
+        </div>
+        <div class="carousel-buttons">
+          <button class="carousel-btn prev">◀</button>
+          <button class="carousel-btn next">▶</button>
+        </div>
+      </div>
     </section>
 
     <section class="connect" data-aos="fade-up">
@@ -87,7 +106,6 @@
       <p>LinkedIn | WhatsApp | Telegram – coming soon</p>
     </section>
 
-    <!-- 📅 Calendly Schedule Section -->
     <section class="schedule" data-aos="fade-up">
       <h2>📅 Book a Coaching Session</h2>
       <p>Choose a time that works for you below:</p>
@@ -111,6 +129,28 @@
       s1.setAttribute('crossorigin', '*');
       s0.parentNode.insertBefore(s1, s0);
     })();
+  </script>
+
+  <!-- ✅ Testimonial Carousel Script -->
+  <script>
+    const track = document.querySelector('.carousel-track');
+    const prevBtn = document.querySelector('.carousel-btn.prev');
+    const nextBtn = document.querySelector('.carousel-btn.next');
+    let index = 0;
+
+    function updateCarousel() {
+      track.style.transform = `translateX(-${index * 100}%)`;
+    }
+
+    nextBtn.addEventListener('click', () => {
+      index = (index + 1) % track.children.length;
+      updateCarousel();
+    });
+
+    prevBtn.addEventListener('click', () => {
+      index = (index - 1 + track.children.length) % track.children.length;
+      updateCarousel();
+    });
   </script>
 
   <!-- ✅ AOS Script -->
