--- a/about.html
+++ b/about.html
@@ -1,24 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About - Academic Tutor</title>
+  <title>About Us – Tutor Brian & Team</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+  <nav>…same nav as index.html…</nav>
 
-  <section>
-    <h1>About Me</h1>
-    <p>I am an academic coach with experience supporting students in research, writing, and formatting. I help undergraduates, postgraduates, and PhD students develop strong academic skills.</p>
-  </section>
+  <main class="about-page">
+    <section class="intro">
+      <h1>Meet Tutor Brian & the BomFreelanceLab Team</h1>
+      <p>Since founding BomFreelanceLab three years ago, Brian and a dedicated team of full‑time researchers and academic tutors have provided relentless, top‑tier support to students across the US and UK. </p>
+      <p><strong>Brian</strong>, our CEO, has been a freelance researcher since 2019, delivering quality research guidance and academic writing support—full time—ever since.</p>
+    </section>
+
+    <section class="values">
+      <h2>Our Core Values</h2>
+      <ul>
+        <li>🔍 <strong>Integrity:</strong> Upholding academic honesty at every step.</li>
+        <li>🎯 <strong>Excellence:</strong> Delivering rigorous, in‑depth coaching and feedback.</li>
+        <li>🤝 <strong>Collaboration:</strong> Studying with you—not for you.</li>
+        <li>📈 <strong>Growth:</strong> Empowering continuous improvement through learning.</li>
+        <li>💡 <strong>Innovation:</strong> Integrating smart tools and AI‑safe writing methods.</li>
+      </ul>
+    </section>
+
+    <section class="stats">
+      <h2>By the Numbers 📊</h2>
+      <div class="stats-grid">
+        <div class="stat-card">
+          <span class="material-icons">people</span>
+          <h3>250+</h3><p>Happy Clients</p>
+        </div>
+        <div class="stat-card">
+          <span class="material-icons">star_rate</span>
+          <h3>4.9/5</h3><p>Average Rating</p>
+        </div>
+        <div class="stat-card">
+          <span class="material-icons">work</span>
+          <h3>5 Years+</h3><p>Team Experience</p>
+        </div>
+        <div class="stat-card">
+          <span class="material-icons">thumb_up</span>
+          <h3>98%</h3><p>Client Satisfaction</p>
+        </div>
+        <div class="stat-card">
+          <span class="material-icons">done_all</span>
+          <h3>450+</h3><p>Projects Completed</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="quote">
+      <blockquote>
+        <p>“Education is the most powerful weapon which you can use to change the world.”</p>
+        <cite>– Nelson Mandela :contentReference[oaicite:2]{index=2}</cite>
+      </blockquote>
+    </section>
+
+    <section class="team-images">
+      <!-- Image carousel -->
+      <!-- Use the images above -->
+    </section>
+
+  </main>
+
+  <footer>…same footer as index.html…</footer>
 </body>
 </html>
